--- a/index.html
+++ b/index.html
@@ -69,16 +69,16 @@
   <img src="image.png" alt="Chef horneando">
 
   <div class="social-buttons">
-    <a href="https://www.facebook.com" target="_blank">
+    <a href="https://www.facebook.com/profile.php?id=61565958733006" target="_blank">
       <img src="https://cdn-icons-png.flaticon.com/512/733/733547.png" alt="Facebook">
     </a>
-    <a href="https://www.instagram.com" target="_blank">
+    <a href="https://l.facebook.com/l.php?u=https%3A%2F%2Fwww.instagram.com%2Fpandorocr%3Ffbclid%3DIwZXh0bgNhZW0CMTAAAR3AC9TMdr4gsW31suMyl1VDY_R5mbsNQJaZrbu9m_cABOVVmH79UOsjqrs_aem_zYOXwTNruF6gKqk9HK0RNQ&h=AT1Hj0RP4xJXxw_VUQYHmPSKYQ6ry-0xGkMQ-4qNBot3THBuQYrtct2Fucno0K46Z4QFaZ3bz7yp0urmTxl0n-rLH7whlXmmTVqs46Ow8Mei3jRG9_LyJ-UfW92FGyGeVEhV" target="_blank">
       <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="Instagram">
     </a>
-    <a href="https://wa.me/" target="_blank">
+    <a href="https://wa.me/+50689663251" target="_blank">
       <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp">
     </a>
-    <a href="https://www.google.com/maps" target="_blank">
+    <a href="https://maps.app.goo.gl/H6Az19pKCa5XyweD8" target="_blank">
       <img src="https://cdn-icons-png.flaticon.com/512/684/684908.png" alt="Google Maps">
     </a>
   </div>
